--- a/translations/pl/LC_MESSAGES/messages.po
+++ b/translations/pl/LC_MESSAGES/messages.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2025-05-25 04:43+0300\n"
-"PO-Revision-Date: 2025-05-23 15:00+0300\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2025-05-26 05:01+0300\n"
+"PO-Revision-Date: 2025-05-26 02:03+0300\n"
+"Last-Translator: Alyyyy88 <EMAIL@ADDRESS>\n"
 "Language: pl\n"
 "Language-Team: pl <LL@li.org>\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && "
@@ -19,57 +19,75 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.17.0\n"
 
-#: app/app.py:112 app/templates/dashboard.html:3 app/templates/topbar.html:126
+#: app/app.py:105 app/app.py:126
+msgid "In Progress"
+msgstr "W trakcie"
+
+#: app/app.py:112
+msgid "Pending"
+msgstr "Oczekujący"
+
+#: app/app.py:119
+msgid "Completed"
+msgstr "Ukończony"
+
+#: app/app.py:133
+msgid "On Hold"
+msgstr "Wstrzymany"
+
+#: app/app.py:217 app/templates/dashboard.html:3
 msgid "Dashboard"
 msgstr "Panel sterowania"
 
-#: app/app.py:119 app/app.py:143 app/templates/topbar.html:131
+#: app/app.py:224 app/app.py:248
 msgid "Projects"
 msgstr "Projekty"
 
-#: app/app.py:120 app/app.py:136 app/app.py:146
+#: app/app.py:225 app/app.py:241 app/app.py:251
 msgid "Finance"
-msgstr "Zestaw finansów"
+msgstr "Finanse"
 
-#: app/app.py:121 app/app.py:137 app/app.py:147
+#: app/app.py:226 app/app.py:242 app/app.py:252
 msgid "Invoices"
-msgstr "faktury"
+msgstr "Faktury"
 
-#: app/app.py:122 app/app.py:138 app/app.py:148
+#: app/app.py:227 app/app.py:243 app/app.py:253
 msgid "Reporting"
 msgstr "Raportowanie"
 
-#: app/app.py:123 app/app.py:130 app/app.py:144
+#: app/app.py:228 app/app.py:235 app/app.py:249
 msgid "Staff"
 msgstr "Personel"
 
-#: app/app.py:124 app/app.py:131 app/app.py:139 app/app.py:145
+#: app/app.py:229 app/app.py:236 app/app.py:244 app/app.py:250
+#: app/templates/dashboard.html:352
 msgid "Documents"
 msgstr "Dokumenty"
 
-#: app/app.py:125 app/app.py:151
+#: app/app.py:230 app/app.py:256
 msgid "Company Registration"
 msgstr "Rejestracja spółki"
 
-#: app/app.py:126 app/app.py:149
+#: app/app.py:231 app/app.py:254
 msgid "User Management"
-msgstr "Zarządzanie projektami"
+msgstr "Zarządzanie użytkownikami"
 
-#: app/app.py:127 app/app.py:150 app/templates/subplan.html:12
+#: app/app.py:232 app/app.py:255 app/templates/subplan.html:12
 msgid "Subscription Plan"
 msgstr "Plan subskrypcji"
 
-#: app/app.py:132 app/templates/payroll.html:12
+#: app/app.py:237 app/templates/dashboard.html:138
+#: app/templates/payroll.html:12
 msgid "Payroll"
 msgstr "Lista płac"
 
-#: app/app.py:152 app/templates/topbar.html:66
+#: app/app.py:257 app/templates/topbar.html:72
 msgid "Settings"
 msgstr "Ustawienia"
 
 #: app/templates/companyreg.html:11
 msgid "Company Registration Section"
-msgstr "Sekcja raportowania"
+msgstr "Sekcja rejestracji spółki"
 
 #: app/templates/companyreg.html:13
 msgid ""
@@ -88,51 +106,229 @@ msgstr ""
 msgid "Thank you for your patience!"
 msgstr "Dziękujemy za cierpliwość!"
 
-#: app/templates/dashboard.html:10
+#: app/templates/dashboard.html:12
 msgid "Total Staff"
-msgstr "całkowity personel"
+msgstr "Całkowity personel"
 
-#: app/templates/dashboard.html:17
+#: app/templates/dashboard.html:19
 msgid "Active employees"
-msgstr "aktywnych pracowników"
+msgstr "Aktywni pracownicy"
 
-#: app/templates/dashboard.html:32
+#: app/templates/dashboard.html:34
 msgid "Active Projects"
-msgstr "aktywne projekty"
+msgstr "Aktywne projekty"
 
-#: app/templates/dashboard.html:36
+#: app/templates/dashboard.html:38
 msgid "In progress"
 msgstr "W trakcie"
 
-#: app/templates/dashboard.html:42
+#: app/templates/dashboard.html:44
 msgid "Document Count"
-msgstr "liczba dokumentów"
+msgstr "Liczba dokumentów"
 
-#: app/templates/dashboard.html:46
+#: app/templates/dashboard.html:51
 msgid "Total documents"
-msgstr "dokumenty ogółem"
+msgstr "Dokumenty ogółem"
 
-#: app/templates/dashboard.html:53
-msgid "Profit (Income - Expenses)"
-msgstr "Zysk (Przychody - Wydatki)"
+#: app/templates/dashboard.html:65 app/templates/dashboard.html:239
+#: app/templates/layout.html:45
+msgid "Profit"
+msgstr "Zysk"
 
-#: app/templates/dashboard.html:63
+#: app/templates/dashboard.html:74 app/templates/dashboard.html:99
+#: app/templates/dashboard.html:123 app/templates/dashboard.html:147
 msgid "Current month"
 msgstr "Bieżący miesiąc"
 
-#: app/templates/dashboard.html:78
+#: app/templates/dashboard.html:90
+msgid "Monthly Income"
+msgstr "Miesięczny przychód"
+
+#: app/templates/dashboard.html:114
+msgid "Monthly Expenses"
+msgstr "Miesięczne wydatki"
+
+#: app/templates/dashboard.html:152
+msgid "Employees"
+msgstr "Pracownicy"
+
+#: app/templates/dashboard.html:156
+msgid "Avg"
+msgstr "Średnia"
+
+#: app/templates/dashboard.html:176
+msgid "Outstanding Invoices"
+msgstr "Niezapłacone faktury"
+
+#: app/templates/dashboard.html:185
+msgid "Total amount"
+msgstr "Całkowita kwota"
+
+#: app/templates/dashboard.html:190
+msgid "Count"
+msgstr "Liczba"
+
+#: app/templates/dashboard.html:194
+msgid "Overdue"
+msgstr "Zaległe"
+
+#: app/templates/dashboard.html:211
+msgid "Cash Flow (Last 6 Months)"
+msgstr "Przepływ gotówki (ostatnie 6 miesięcy)"
+
+#: app/templates/dashboard.html:222
+msgid "Loading chart..."
+msgstr "Ładowanie wykresu..."
+
+#: app/templates/dashboard.html:231 app/templates/layout.html:43
+msgid "Income"
+msgstr "Przychód"
+
+#: app/templates/dashboard.html:235 app/templates/layout.html:44
+msgid "Expenses"
+msgstr "Wydatki"
+
+#: app/templates/dashboard.html:250
+msgid "Project Summaries"
+msgstr "Podsumowania projektów"
+
+#: app/templates/dashboard.html:254
+msgid "Sort by"
+msgstr "Sortuj według"
+
+#: app/templates/dashboard.html:260
+msgid "Name"
+msgstr "Nazwa"
+
+#: app/templates/dashboard.html:261
+msgid "Status"
+msgstr "Status"
+
+#: app/templates/dashboard.html:262
+msgid "Completion"
+msgstr "Ukończenie"
+
+#: app/templates/dashboard.html:275
+msgid "Search projects..."
+msgstr "Szukaj projektów..."
+
+#: app/templates/dashboard.html:298
+msgid "Client"
+msgstr "Klient"
+
+#: app/templates/dashboard.html:301
+msgid "Progress"
+msgstr "Postęp"
+
+#: app/templates/dashboard.html:312
+msgid "View Details"
+msgstr "Zobacz szczegóły"
+
+#: app/templates/dashboard.html:336
+msgid "HR Dashboard"
+msgstr "Panel HR"
+
+#: app/templates/dashboard.html:342
+msgid "Recent Employee Activities"
+msgstr "Ostatnie aktywności pracowników"
+
+#: app/templates/dashboard.html:348
+msgid "All"
+msgstr "Wszystkie"
+
+#: app/templates/dashboard.html:349
+msgid "Attendance"
+msgstr "Obecność"
+
+#: app/templates/dashboard.html:350
+msgid "Leave"
+msgstr "Urlop"
+
+#: app/templates/dashboard.html:351
+msgid "Performance"
+msgstr "Wydajność"
+
+#: app/templates/dashboard.html:377
+msgid "No recent activities to display"
+msgstr "Brak ostatnich aktywności do wyświetlenia"
+
+#: app/templates/dashboard.html:385
+msgid "View All Activities"
+msgstr "Zobacz wszystkie aktywności"
+
+#: app/templates/dashboard.html:393
+msgid "New Joiners This Month"
+msgstr "Nowi pracownicy w tym miesiącu"
+
+#: app/templates/dashboard.html:395
+msgid "New"
+msgstr "Nowy"
+
+#: app/templates/dashboard.html:420
+msgid "Joined"
+msgstr "Dołączył"
+
+#: app/templates/dashboard.html:423
+msgid "Send Message"
+msgstr "Wyślij wiadomość"
+
+#: app/templates/dashboard.html:426
+msgid "View Profile"
+msgstr "Zobacz profil"
+
+#: app/templates/dashboard.html:435
+msgid "No new joiners this month"
+msgstr "Brak nowych pracowników w tym miesiącu"
+
+#: app/templates/dashboard.html:444
+msgid "Onboarding Progress"
+msgstr "Postęp wdrażania"
+
+#: app/templates/dashboard.html:467
+msgid "HR Overview"
+msgstr "Przegląd HR"
+
+#: app/templates/dashboard.html:469
+msgid "This Month"
+msgstr "Ten miesiąc"
+
+#: app/templates/dashboard.html:470
+msgid "Last Month"
+msgstr "Poprzedni miesiąc"
+
+#: app/templates/dashboard.html:471
+msgid "This Quarter"
+msgstr "Ten kwartał"
+
+#: app/templates/dashboard.html:483 app/templates/dashboard.html:519
+msgid "Attendance Rate"
+msgstr "Wskaźnik obecności"
+
+#: app/templates/dashboard.html:492
+msgid "Leave Requests"
+msgstr "Wnioski urlopowe"
+
+#: app/templates/dashboard.html:501
+msgid "Open Positions"
+msgstr "Otwarte stanowiska"
+
+#: app/templates/dashboard.html:510
+msgid "Training Completion"
+msgstr "Ukończenie szkolenia"
+
+#: app/templates/dashboard.html:543
 msgid "Company Storage Usage"
 msgstr "Wykorzystanie pamięci masowej firmy"
 
-#: app/templates/dashboard.html:98
+#: app/templates/dashboard.html:564
 msgid "System Info"
 msgstr "Informacje o systemie"
 
-#: app/templates/dashboard.html:101
+#: app/templates/dashboard.html:567
 msgid "Version"
 msgstr "Wersja"
 
-#: app/templates/dashboard.html:103
+#: app/templates/dashboard.html:569
 msgid "Last updated"
 msgstr "Ostatnia aktualizacja"
 
@@ -171,6 +367,34 @@ msgid ""
 msgstr ""
 "Ta funkcja pojawi się wkrótce. Ciężko pracujemy nad ulepszoną obsługą "
 "faktur."
+
+#: app/templates/layout.html:37
+msgid "Jan"
+msgstr "Sty"
+
+#: app/templates/layout.html:38
+msgid "Feb"
+msgstr "Lut"
+
+#: app/templates/layout.html:39
+msgid "Mar"
+msgstr "Mar"
+
+#: app/templates/layout.html:40
+msgid "Apr"
+msgstr "Kwi"
+
+#: app/templates/layout.html:41
+msgid "May"
+msgstr "Maj"
+
+#: app/templates/layout.html:42
+msgid "Jun"
+msgstr "Cze"
+
+#: app/templates/mobilesidebar.html:8 app/templates/sidebar.html:10
+msgid "Project Management"
+msgstr "Zarządzanie projektami"
 
 #: app/templates/payroll.html:15
 msgid ""
@@ -216,10 +440,6 @@ msgstr ""
 "Ta funkcja pojawi się wkrótce. Ciężko pracujemy nad ulepszeniem "
 "doświadczenia ustawień."
 
-#: app/templates/sidebar.html:10
-msgid "Project Management"
-msgstr "Zarządzanie projektami"
-
 #: app/templates/sidebar.html:34
 msgid "All right reserved. Developed 2025"
 msgstr "Wszelkie prawa zastrzeżone. Opracowano 2025"
@@ -244,39 +464,39 @@ msgstr ""
 "Ta funkcja pojawi się wkrótce. Ciężko pracujemy nad ulepszoną obsługą "
 "subskrypcji."
 
-#: app/templates/topbar.html:3
+#: app/templates/topbar.html:5
 msgid "Welcome"
 msgstr "Witamy"
 
-#: app/templates/topbar.html:14
+#: app/templates/topbar.html:16
 msgid "Language"
 msgstr "Język"
 
-#: app/templates/topbar.html:57
+#: app/templates/topbar.html:59
 msgid "Signed in as"
 msgstr "Zalogowany jako"
 
-#: app/templates/topbar.html:63
+#: app/templates/topbar.html:65
 msgid "Your Profile"
 msgstr "Twój profil"
 
-#: app/templates/topbar.html:70
+#: app/templates/topbar.html:77
 msgid "Sign out"
 msgstr "Wyloguj się"
 
-#: app/templates/topbar.html:78
+#: app/templates/topbar.html:85
 msgid "Set Admin"
 msgstr "Ustaw administratora"
 
-#: app/templates/topbar.html:84
+#: app/templates/topbar.html:91
 msgid "Set HR"
 msgstr "Ustaw HR"
 
-#: app/templates/topbar.html:90
+#: app/templates/topbar.html:97
 msgid "Set Finance"
 msgstr "Ustaw finanse"
 
-#: app/templates/topbar.html:96
+#: app/templates/topbar.html:103
 msgid "Set Superadmin"
 msgstr "Ustaw superadmina"
 
@@ -291,4 +511,3 @@ msgid ""
 msgstr ""
 "Ta funkcja pojawi się wkrótce. Ciężko pracujemy nad ulepszeniem "
 "doświadczenia w zarządzaniu użytkownikami."
-
